Overflow bug fixed

--- a/app/styles/elements/_header.scss
+++ b/app/styles/elements/_header.scss
@@ -8,6 +8,7 @@
   background-color: #FFFFFF;
   position: fixed;
   box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.2);
+  z-index: 100;
 }
 
 .header__content {
